Bug 459346 - Extraction via context menu of Dolphin is aborted when I quit Dolphin
Summary: Extraction via context menu of Dolphin is aborted when I quit Dolphin
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
: 432891 445527 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-09-18 19:12 UTC by Patrick Silva
Modified: 2023-07-22 14:12 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-09-18 19:12:19 UTC
STEPS TO REPRODUCE
1. extract a large archive via 'Extract > Extract archive here' option from context menu of Dolphin - I'm extracting
a 4.4 GiB video file compressed to tar.gz format
2. when the extraction starts, immediately quit Dolphin by pressing ctrl+q
3. 

OBSERVED RESULT
A notification falsely says 'Extraction (Finished)'. I reopen Dolphin and I see that my video was not extracted.
The extraction was aborted after pressing ctrl+q in the step 2.

EXPECTED RESULT
extraction should not be aborted when we quit Dolphin

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.90
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Patrick Silva 2022-09-18 20:00:50 UTC
The notification says 'Extracting files (Finished)', not 'Extraction (Finished)'.
Comment 2 veggero 2022-09-19 17:17:36 UTC
Can confirm
Comment 3 Bug Janitor Service 2022-09-27 23:13:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/137
Comment 4 Elvis Angelaccio 2022-09-28 17:22:46 UTC
Git commit f9f71649bba9ada37a4b4519bae1d14c33b9d2b4 by Elvis Angelaccio.
Committed on 28/09/2022 at 17:21.
Pushed by elvisangelaccio into branch 'master'.

Stop killing extraction/compression jobs when dolphin quits
FIXED-IN: 22.08.2

M  +3    -1    app/compressfileitemaction.cpp
M  +3    -1    app/extractfileitemaction.cpp

https://invent.kde.org/utilities/ark/commit/f9f71649bba9ada37a4b4519bae1d14c33b9d2b4
Comment 5 Elvis Angelaccio 2022-09-28 17:28:16 UTC
Git commit 291f8927211a036bf0c84e8548061c52b235c2dc by Elvis Angelaccio.
Committed on 28/09/2022 at 17:28.
Pushed by elvisangelaccio into branch 'release/22.08'.

Stop killing extraction/compression jobs when dolphin quits
FIXED-IN: 22.08.2


(cherry picked from commit f9f71649bba9ada37a4b4519bae1d14c33b9d2b4)

M  +3    -1    app/compressfileitemaction.cpp
M  +3    -1    app/extractfileitemaction.cpp

https://invent.kde.org/utilities/ark/commit/291f8927211a036bf0c84e8548061c52b235c2dc
Comment 6 Andrey 2022-11-03 13:06:25 UTC
*** Bug 445527 has been marked as a duplicate of this bug. ***
Comment 7 Méven 2023-07-22 14:12:39 UTC
*** Bug 432891 has been marked as a duplicate of this bug. ***