Stop killing extraction/compression jobs when dolphin quits

BUG: 459346
FIXED-IN: 22.08.2


(cherry picked from commit f9f71649bba9ada37a4b4519bae1d14c33b9d2b4)